@@ -276,10 +276,12 @@ protected:
     class ModelColumns : public Gtk::TreeModel::ColumnRecord {
     public:
         ModelColumns() {
+          add(m_col_nr);
           add(m_col_name);
           add(m_col_instr);
         }
 
+        Gtk::TreeModelColumn<int> m_col_nr;
         Gtk::TreeModelColumn<Glib::ustring> m_col_name;
         Gtk::TreeModelColumn<gig::Instrument*> m_col_instr;
     } m_Columns;
